# automotive-assistance

./: .gitignore  README.md  pyproject.toml
automotive_assistance/: assistant_features.py  errors.py  main.py  speech_recognition.py  speech_synthesis.py  text_analysis.py  token_service.py
automotive_assistance/google/rpc/: status_pb2.py
automotive_assistance/yandex/cloud/ai/stt/v3/: stt_pb2.py  stt_service_pb2.py
automotive_assistance/yandex/cloud/ai/tts/v3/: tts_pb2.py
